--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,9 @@
+@import "variables.scss";
+@import "mixins.scss";
+@import "bootstrap.scss";
+@import "typography.scss";
+@import "layout.scss";
+
 *,
 *::before,
 *::after {
@@ -17,4 +23,22 @@ body {
 
 main {
     flex: 1 1;
+}
+
+.img-profile {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+}
+
+.primary-btn {
+    cursor: pointer;
+    outline: none;
+    border: none;
+
+    padding: 5px 15px;
+    border-radius: 5px;
+    background-color: #f67637;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.1rem;
 }
